--- a/index.html
+++ b/index.html
@@ -154,14 +154,14 @@
             99.5% dari klien kami.
           </p>
           <div class="flex flex-col gap-2 md:flex-row md:gap-2">
-            <a href=""
+            <a href="#profile"
               ><div
                 class="text-center md:w-[200px] cursor-pointer transition-all duration-200 hover:bg-blue-500 font-bold bg-blue-400 text-white rounded-lg p-2"
               >
                 <p>Tentang Kami</p>
               </div></a
             >
-            <a href=""
+            <a href="#layanan"
               ><div
                 class="mb-4 text-center md:w-[200px] cursor-pointer transition-all duration-200 bg-blue-500 font-bold hover:bg-blue-400 text-white rounded-lg p-2"
               >
